# market-trader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DECISIONS.md  Dockerfile  Makefile  OPERATIONS.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
deploy/: cloud-init.sh  market-trader.service  prometheus.yml
scripts/: backup_db.sh  bootstrap_vps.sh  harden.sh  lockdown_ssh.sh  phase0_demo.py  provision_do.py  restore_db.sh
src/market_trader/: __init__.py  alerts.py  cli.py  synthesis.py
tests/: conftest.py  test_cli.py  test_status.py  test_synthesis_alerts.py
tests/backtest/: test_costs.py  test_engine.py  test_holdout.py  test_metrics.py  test_multiple_testing.py  test_replay.py  test_simulation.py  test_splitters.py  test_strategies.py
tests/bitemporal/: test_event_time_window.py  test_knowledge_time_guarantee.py  test_store_equivalence.py
tests/collectors/: test_alpaca.py  test_congress.py  test_csv_prices.py  test_edgar_client.py  test_fred.py  test_fundamentals_client.py  test_gateway_idempotent.py  test_gdelt_client.py  test_intraday.py  test_llm_features.py  test_massive.py  test_news_feed.py  test_prices_edgar_gdelt.py  test_quality.py  test_stooq.py
tests/execution/: test_alpaca_assets.py  test_execution.py  test_open_order_idempotency.py
tests/features/: test_features.py  test_news.py
tests/feedback/: test_feedback.py
tests/forecasting/: test_forecasting.py
tests/infra/: test_digitalocean.py
tests/leakage/: test_no_lookahead.py
tests/memory/: test_episodic.py  test_event_study.py  test_study_runner.py  test_taxonomy_surprise.py
tests/observability/: test_observability.py
tests/orchestration/: test_scheduler.py
tests/portfolio/: test_portfolio_math.py  test_risk.py  test_sizing.py
tests/presentation/: test_dashboard_data.py
tests/reasoning/: test_agents.py  test_briefing.py  test_extraction.py  test_llm.py
tests/runtime/: test_cycle.py  test_evaluation.py  test_holding.py  test_ic_bootstrap.py  test_insider_events.py  test_insider_sleeve.py  (+9 more)
(+119 files in other folders)
