[project]
name = "market-trader"
version = "0.0.0"
description = "Market intelligence & forecasting system — decision-support with gated automated execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "structlog>=24.1",
]

[project.scripts]
market-trader = "market_trader.cli:main"

[project.optional-dependencies]
# Dashboard front-end (Phase 1, increment 2). Kept out of the default install and
# CI so the engine image and test runs stay lean: `uv sync --extra dashboard`.
dashboard = ["streamlit>=1.36"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "black>=24.4",
    "pyright>=1.1.370",
    "pandas-stubs>=2.2",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_trader"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["src/market_trader/storage/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID", "RUF"]
ignore = ["E501"] # black owns line length

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "src/market_trader/storage/migrations",
    # Streamlit shell: depends on the optional `dashboard` extra, not installed in CI.
    "src/market_trader/presentation/dashboard_app.py",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires an external database (deselect with -m 'not integration')",
]
